third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/newline-3.stderr
TOML parse error at line 1, column 8
  |
1 | 'quoted
  |        ^
invalid literal string
